tests/neg/bad_clock_literal.ovt
sensor s : rate(int, (10, 1/3));
actuator a : rate(int, (10, 1/3));
a = s;
